--- a/SailScores.Web/Views/Account/Register.cshtml
+++ b/SailScores.Web/Views/Account/Register.cshtml
@@ -37,12 +37,23 @@
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
+
             <div class="form-group form-check">
                 <input asp-for="EnableAppInsights" class="form-check-input" />
                 <label asp-for="EnableAppInsights" class="form-check-label"></label>
                 <span asp-validation-for="EnableAppInsights" class="text-danger"></span>
-                <div class="alert alert-success" role="alert">
-                    If checked, SailScores will submit information about the page speed and errors you encounter.
+                <div class="alert alert-primary" role="alert">
+                    If checked, SailScores will record information about the page speed and errors you encounter.
+                    This will greatly assist in improving the service. No data is shared with any other organization. See our
+                    <a asp-controller="Home" asp-action="Privacy">Privacy Policy</a> for details.
+                </div>
+            </div>
+            <div class="form-group form-check">
+                <input asp-for="NewsletterSubscribe" class="form-check-input" />
+                <label asp-for="NewsletterSubscribe" class="form-check-label"></label>
+                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                <div class="alert alert-primary" role="alert">
+                    If checked, SailScores will record information about the page speed and errors you encounter.
                     This will greatly assist in improving the service. No data is shared with any other organization. See our
                     <a asp-controller="Home" asp-action="Privacy">Privacy Policy</a> for details.
                 </div>
