Mailchimp mailing list sign up added and styled

--- a/SailScores.Web/Views/Account/Register.cshtml
+++ b/SailScores.Web/Views/Account/Register.cshtml
@@ -53,9 +53,9 @@
                 <label asp-for="NewsletterSubscribe" class="form-check-label"></label>
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                 <div class="alert alert-primary" role="alert">
-                    If checked, SailScores will record information about the page speed and errors you encounter.
-                    This will greatly assist in improving the service. No data is shared with any other organization. See our
-                    <a asp-controller="Home" asp-action="Privacy">Privacy Policy</a> for details.
+                    Check this option to sign up for occasional SailScores mailings
+                    with feature updates and tips on usage. While the mailing list is hosted by Mailchimp,
+                    we don't share data with other third parties.
                 </div>
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
