--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -4,6 +4,65 @@
 }
 <div class="col-lg-9">
     <h1 class="h3"><span class="far fa-newspaper"></span>News</h1>
+
+    <div id="mc_embed_shell">
+        <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+        <style type="text/css">
+            #mc_embed_signup {
+            }
+            #mc_embed_signup form {
+                padding-bottom: 0;
+                margin: 0;
+            }
+        </style>
+        <div id="mc_embed_signup">
+            <form action="https://sailscores.us21.list-manage.com/subscribe/post?u=4c056d1da229280dc540aa0a8&amp;id=1fe6038e60&amp;f_id=003af1e6f0"
+                    method="post" id="mc-embedded-subscribe-form"
+                    name="mc-embedded-subscribe-form"
+                    class="validate" target="_blank">
+                <div id="mc_embed_signup_scroll">
+                    <p><em>Sign up to receive occasional SailScores updates</em></p>
+                    <div class="mc-field-group" style="width:100%"><label for="mce-EMAIL">Email Address </label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
+                    <div id="mce-responses" class="clear foot">
+                        <div class="response" id="mce-error-response" style="display: none;"></div>
+                        <div class="response" id="mce-success-response" style="display: none;"></div>
+                    </div>
+                    <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                        <input type="text" name="b_4c056d1da229280dc540aa0a8_1fe6038e60" tabindex="-1" value="">
+                    </div>
+                    <div class="optionalParent row">
+                        <div class="col-6">
+                            <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary btn-block m-0" value="Subscribe">
+                        </div>
+                        <div class="col-6">
+                            <a href="http://eepurl.com/iF-FK2" target="_blank"
+                            title="Mailchimp - email marketing made easy and fun">
+                            <span style="display: inline-block; background-color: #f3e14d; border-radius: 4px;">
+                                    <img class="refferal_badge" 
+                                    src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
+                                    alt="Intuit Mailchimp" 
+                                    style="width: 220px; height: 40px; padding: 2px 0px; justify-content: center; align-items: center;">
+                            </span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; fnames[6] = 'MMERGE6'; ftypes[6] = 'text'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+    </div>
+    <hr />
+
+    <h3>December 21st, 2023</h3>
+    <h5>Making a list...</h5>
+    <p>We've started a mailing list for SailScores users. Sign up using the form above
+        to receive an occasional email notification of new SailScores features
+        and updates as well as tips for using the site.
+        Emails won't be very frequent: averaging less than one a month.
+    </p>
+    <p>We'll continue to update this page as significant updates are made as well.
+    </p>
+    <br />
     <h3>November 18th, 2023</h3>
     <h5>Cox-Sprague Scoring</h5>
     <p>
