--- a/SailScores.Web/Views/Race/Delete.cshtml
+++ b/SailScores.Web/Views/Race/Delete.cshtml
@@ -36,7 +36,8 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form id="deleteForm" 
+        asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="hidden" asp-for="ClubId" />
         <input type="submit" value="Delete" class="btn btn-danger" />
@@ -54,11 +55,13 @@
 
 @section Scripts {
     <script>
-        var waiting = $('#ssWaitingModal');
-        if (!!waiting) {
-            waiting.show();
-        }
-        $('#submitButton').attr('value', 'Please wait...');
+        $("#deleteForm").submit(function (e) {
+            var waiting = $('#ssWaitingModal');
+            if (!!waiting) {
+                waiting.show();
+            }
+            $('#submitButton').attr('value', 'Please wait...');
+        });
     </script>
 
 }
