--- a/SailScores.Web/Views/WhatIf/Options.cshtml
+++ b/SailScores.Web/Views/WhatIf/Options.cshtml
@@ -21,7 +21,8 @@ Check how series results change if scored with different options.
 </div>
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Show"
+        <form id="optionsForm"
+            asp-action="Show"
               asp-route-returnurl="@ViewData["ReturnUrl"]">
             <input type="hidden" id="SeriesId" asp-for="Series.Id" />
             <div>
@@ -50,7 +51,7 @@ Check how series results change if scored with different options.
                 <span asp-validation-for="ParticipationPercent" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Calculate Results" class="btn btn-primary my-2" />
+                <input id="submitButton" type="submit" value="Calculate Results" class="btn btn-primary my-2" />
                 <a class="btn btn-outline-primary"
                     asp-action="Edit"
                     asp-controller="Series"
@@ -60,8 +61,24 @@ Check how series results change if scored with different options.
         </form>
     </div>
 </div>
+<div id="ssWaitingModal" class="waitingModal">
+    <span>
+        <div class="spinner-border" role="status"></div><br />
+        <h3>Calculating...</h3>
+    </span>
+</div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="~/vendor/bootstrap-select/js/bootstrap-select.min.js"></script>
+    <script>
+        $("#optionsForm").submit(function (e) {
+            var waiting = $('#ssWaitingModal');
+            if (!!waiting) {
+                waiting.show();
+            }
+            $('#submitButton').attr('value', 'Please wait...');
+        });
+    </script>
 }
